--- a/CSS/그림자.md
+++ b/CSS/그림자.md
@@ -17,10 +17,10 @@
 
 | 프로퍼티값  | 단위  | Description                                                                                                                         | 생략 |
 | ----------- | ----- | ----------------------------------------------------------------------------------------------------------------------------------- | ---- |
-| offset-x    | px    | 그림자와 텍스트 사이의 **수평거리**를 지정<br>- 지정값만큼 그림자를 텍스트의 오른쪽으로 이동시킴<Br>- 음수값은 텍스트의 왼쪽에 배치 |      |
-| offset-y    | px    | 그림자와 텍스트 사이의 **수직거리**를 지정<Br>- 지정값만큼 그림자를 텍스트의 아래로 이동시킴<Br>- 음수값은 텍스트의 위쪽에 배치     |      |
-| blur-radius | px    | 그림자의 **흐림정도**를 지정함<Br>- 지정값만큼 그림자가 커지고 흐려짐<Br>- 음수값은 허용하지 않음                                   | 가능 |
-| color       | color | 그림자의 **색상**을 지정함                                                                                                          | 가능 |
+| `offset-x`    | px    | 그림자와 텍스트 사이의 **수평거리**를 지정<br>- 지정값만큼 그림자를 텍스트의 오른쪽으로 이동시킴<Br>- 음수값은 텍스트의 왼쪽에 배치 |      |
+| `offset-y`    | px    | 그림자와 텍스트 사이의 **수직거리**를 지정<Br>- 지정값만큼 그림자를 텍스트의 아래로 이동시킴<Br>- 음수값은 텍스트의 위쪽에 배치     |      |
+| `blur-radius` | px    | 그림자의 **흐림정도**를 지정함<Br>- 지정값만큼 그림자가 커지고 흐려짐<Br>- 음수값은 허용하지 않음                                   | 가능 |
+| `color`       | color | 그림자의 **색상**을 지정함                                                                                                          | 가능 |
 
 - 그림자를 **다중 지정**하려면 쉼표로 구분한 후 프로퍼티값 추가로 입력
 
